compiler/parser/src/snapshots/rustpython_parser__string__tests__fstring_line_continuation.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..9,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..9,
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            range: 0..9,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "\\\n",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 0..9,
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    range: 6..7,
                                    custom: (),
                                    node: Name {
                                        id: "x",
                                        ctx: Load,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
