compiler/parser/src/snapshots/rustpython_parser__string__tests__fstring_parse_self_documenting_base.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..10,
        custom: (),
        node: Constant {
            value: Str(
                "user=",
            ),
            kind: None,
        },
    },
    Located {
        range: 0..10,
        custom: (),
        node: Constant {
            value: Str(
                "",
            ),
            kind: None,
        },
    },
    Located {
        range: 0..10,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..7,
                custom: (),
                node: Name {
                    id: "user",
                    ctx: Load,
                },
            },
            conversion: 114,
            format_spec: None,
        },
    },
]
