compiler/parser/src/snapshots/rustpython_parser__string__tests__hts_alias.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..9,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..9,
                custom: (),
                node: Constant {
                    value: Str(
                        "\u{88}",
                    ),
                    kind: None,
                },
            },
        },
    },
]
