compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_f_string_concat_3.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..22,
        custom: (),
        node: Expr {
            value: Located {
                range: 0..22,
                custom: (),
                node: JoinedStr {
                    values: [
                        Located {
                            range: 0..22,
                            custom: (),
                            node: Constant {
                                value: Str(
                                    "Hello world",
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 9..22,
                            custom: (),
                            node: FormattedValue {
                                value: Located {
                                    range: 17..20,
                                    custom: (),
                                    node: Constant {
                                        value: Str(
                                            "!",
                                        ),
                                        kind: None,
                                    },
                                },
                                conversion: 0,
                                format_spec: None,
                            },
                        },
                    ],
                },
            },
        },
    },
]
