compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..18,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..4,
                custom: (),
                node: Name {
                    id: "a",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
    Located {
        range: 0..18,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 7..8,
                custom: (),
                node: Name {
                    id: "b",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
    Located {
        range: 0..18,
        custom: (),
        node: Constant {
            value: Str(
                "{foo}",
            ),
            kind: None,
        },
    },
]
