compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_equals.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..13,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..11,
                custom: (),
                node: Compare {
                    left: Located {
                        range: 3..5,
                        custom: (),
                        node: Constant {
                            value: Int(
                                42,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        Eq,
                    ],
                    comparators: [
                        Located {
                            range: 9..11,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    42,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
