compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_nested_spec.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..15,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..6,
                custom: (),
                node: Name {
                    id: "foo",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    range: 0..15,
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                range: 0..15,
                                custom: (),
                                node: FormattedValue {
                                    value: Located {
                                        range: 8..12,
                                        custom: (),
                                        node: Name {
                                            id: "spec",
                                            ctx: Load,
                                        },
                                    },
                                    conversion: 0,
                                    format_spec: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
