compiler/parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_not_equals.snap
---
source: compiler/parser/src/string.rs
expression: parse_ast
---
[
    Located {
        range: 0..11,
        custom: (),
        node: FormattedValue {
            value: Located {
                range: 3..9,
                custom: (),
                node: Compare {
                    left: Located {
                        range: 3..4,
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        NotEq,
                    ],
                    comparators: [
                        Located {
                            range: 8..9,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
